Fixed getFirst